feat(task): Add repository method to find user tasks sorted by creation date